--- a/equipment/views/equipment_view.xml
+++ b/equipment/views/equipment_view.xml
@@ -28,7 +28,7 @@
                     <sheet>
                         <div class="oe_right oe_button_box" style="width: 300px;" name="buttons">
                         </div>
-                        <field name="image_medium" widget="image" class="oe_avatar oe_right"/>
+                        <field name="image_small" widget="image" class="oe_avatar oe_right"/>
                         <div class="oe_title">
                             <label for="name" class="oe_edit_only"/>
                             <h1>
