--- a/equipment/views/equipment_brand_view.xml
+++ b/equipment/views/equipment_brand_view.xml
@@ -55,7 +55,7 @@
 			id="menu_equipment_brand"
 			parent="menu_equipment_config"
 			action="equipment_brand_action_view"
-			groups="equipment.group_technical_support_manager"
+			groups="equipment.group_equipment_manager"
 			sequence="3"/>
 
 	</odoo>
