--- a/equipment/views/equipment_dicom_view.xml
+++ b/equipment/views/equipment_dicom_view.xml
@@ -103,7 +103,7 @@
 			id="menu_equipment_dicom_type"
 			parent="menu_equipment_config"
 			action="equipment_dicom_type_action_view"
-			groups="equipment.group_technical_support_manager"
+			groups="equipment.group_equipment_manager"
 			sequence="6"/>
 
 		<!-- Equipment Dicom item -->
@@ -112,7 +112,7 @@
 			id="menu_equipment_dicom"
 			parent="menu_equipment_config"
 			action="equipment_dicom_action_view"
-			groups="equipment.group_technical_support_manager"
+			groups="equipment.group_equipment_manager"
 			sequence="5"/>
 
 
