--- a/equipment/views/equipment_modality_view.xml
+++ b/equipment/views/equipment_modality_view.xml
@@ -96,7 +96,7 @@
 			id="menu_equipment_modality"
 			parent="menu_equipment_config"
 			action="equipment_modality_action_view"
-			groups="equipment.group_technical_support_manager"
+			groups="equipment.group_equipment_manager"
 			sequence="12"/>
 
 	</odoo>
