--- a/equipment/views/equipment_model_view.xml
+++ b/equipment/views/equipment_model_view.xml
@@ -53,7 +53,7 @@
 			id="menu_equipment_model"
 			parent="menu_equipment_config"
 			action="equipment_model_action_view"
-			groups="equipment.group_technical_support_manager"
+			groups="equipment.group_equipment_manager"
 			sequence="7"/>
 
 	</odoo>
