--- a/equipment/views/equipment_network_view.xml
+++ b/equipment/views/equipment_network_view.xml
@@ -64,7 +64,7 @@
 			id="menu_equipment_network"
 			parent="menu_equipment_config"
 			action="equipment_network_action_view"
-			groups="equipment.group_technical_support_manager"
+			groups="equipment.group_equipment_manager"
 			sequence="4"/>
 
 
