--- a/equipment/views/equipment_view.xml
+++ b/equipment/views/equipment_view.xml
@@ -23,7 +23,7 @@
             <field name="arch" type="xml">
                 <form string="Equipments" version="7.0">
                     <header>
-                        <field name="maintenance_state_id" widget="statusbar" clickable="True" groups="equipment.group_technical_support_user"/>
+                        <field name="maintenance_state_id" widget="statusbar" clickable="True" groups="equipment.group_equipment_user"/>
                     </header>
                     <sheet>
                         <div class="oe_right oe_button_box" style="width: 300px;" name="buttons">
@@ -372,7 +372,7 @@
         <menuitem
 						name="Equipments"
             id="menu_equipment"
-            groups="equipment.group_technical_support_user"
+            groups="equipment.group_equipment_user"
 						web_icon="equipment,static/description/icon.png"
             sequence="92"/>
 
@@ -382,7 +382,7 @@
 						action="action_equipments"
 						id="menu_maintenance_equipments_equipments"
 						parent="menu_equipment"
-						groups="equipment.group_technical_support_user"
+						groups="equipment.group_equipment_user"
 						sequence="1"/>
 
 				<!-- Management equipment item -->
@@ -390,14 +390,14 @@
 						action="action_management_equipments"
 						id="menu_equipments_states"
 						parent="menu_equipment"
-						groups="equipment.group_technical_support_user"
+						groups="equipment.group_equipment_user"
 						sequence="100"/>
 
 				<!-- Report menu -->
 				<menuitem name="Reports"
 						id="menu_equipment_report"
 						parent="menu_equipment"
-						groups="equipment.group_technical_support_customer"
+						groups="equipment.group_equipment_customer"
 						sequence="30"/>
 
 				<!-- Configuration menu -->
@@ -405,7 +405,7 @@
 						name="Configuration"
 						id="menu_equipment_config"
 						parent="menu_equipment"
-						groups="equipment.group_technical_support_manager"
+						groups="equipment.group_equipment_manager"
 						sequence="200"/>
 
 				<!-- Equipment Tags item -->
@@ -414,7 +414,7 @@
 		        action="action_equipment_category"
 		        id="menu_equipment_category"
 		        parent="menu_equipment_config"
-		        groups="equipment.group_technical_support_manager"
+		        groups="equipment.group_equipment_manager"
 		        sequence="1"/>
 
 			  <!-- Equipment state item -->
@@ -423,7 +423,7 @@
 				    action="action_equipment_state"
 				    id="menu_equipment_state"
 				    parent="menu_equipment_config"
-				    groups="equipment.group_technical_support_manager"
+				    groups="equipment.group_equipment_manager"
 				    sequence="2"/>
 
  	</data>
