--- a/equipment/views/equipment_modality_view.xml
+++ b/equipment/views/equipment_modality_view.xml
@@ -6,7 +6,7 @@
 		        <field name="name">equipment.modality.view.form</field>
 		        <field name="model">equipment.modality</field>
 		        <field name="arch" type="xml">
-		            <form string="Equipment Modalities">
+		            <form string="Modality">
 		                <sheet>
 		                	<div class="oe_button_box" name="button_box">
 		                	</div>
