--- a/equipment/views/equipment_modality_view.xml
+++ b/equipment/views/equipment_modality_view.xml
@@ -6,23 +6,24 @@
 		        <field name="name">equipment.modality.view.form</field>
 		        <field name="model">equipment.modality</field>
 		        <field name="arch" type="xml">
-		            <form string="Modality">
-		                <sheet>
-		                	<div class="oe_button_box" name="button_box">
-		                	</div>
-		                	<div class="oe_title">
-		                    <label for="name" class="oe_edit_only" string="Modality Name"/>
-		                    <h1>
-		                        <field name="name"/>
-		                    </h1>
-											</div>
+							<form string="Modality">
+									<sheet>
+										<div class="oe_button_box" name="button_box">
+										</div>
+										<group>
 											<group>
-												<group>
-												</group>
+											<field name="name"/>
 											</group>
-		                <field name="note" nolabel="1"/>
-		                </sheet>
-		            </form>
+											<group>
+											</group>
+										</group>
+										<notebook>
+											<page string="Note">
+													<field name="note" nolabel="1"/>
+											</page>
+										</notebook>
+									</sheet>
+							</form>
 		        </field>
 		    </record>
 
