--- a/technical_support/views/equipment_view.xml
+++ b/technical_support/views/equipment_view.xml
@@ -25,7 +25,7 @@
             <field name="model">equipment.equipment</field>
             <field name="inherit_id" ref="equipment.equipments_tree_view"/>
             <field name="arch" type="xml">
-                <field name="user_id" position="after">
+                <field name="name" position="after">
                     <field name="maintenance_state_id"/>
                 </field>
             </field>
