--- a/equipment/views/equipment_view.xml
+++ b/equipment/views/equipment_view.xml
@@ -161,6 +161,7 @@
                                         <li>Model: <field name="model_id"></field></li>
                                         <li>Brand: <field name="brand_id"></field></li>
                                         <li>Serial No: <field name="serial"></field></li>
+																				<li>Client: <field name="client_id"></field></li>
                                         <li class="emsa_kanban_info">
                                         <a t-if="record.criticality.raw_value == 0" t-attf-title="#{record.criticality.value}" class="emsa_attention_off"><span class="fa fa-exclamation-triangle"/></a>
                                         <a t-if="record.criticality.raw_value gt 0" t-attf-title="#{record.criticality.value}" class="emsa_attention_on"><span class="fa fa-exclamation-triangle"/></a>
@@ -168,7 +169,7 @@
                                         <a t-if="record.criticality.raw_value gt 1" t-attf-title="#{record.criticality.value}" class="emsa_attention_on"><span class="fa fa-exclamation-triangle"/></a>
                                         <a t-if="record.criticality.raw_value lte 2" t-attf-title="#{record.criticality.value}" class="emsa_attention_off"><span class="fa fa-exclamation-triangle"/></a>
                                         <a t-if="record.criticality.raw_value gt 2" t-attf-title="#{record.criticality.value}" class="emsa_attention_on"><span class="fa fa-exclamation-triangle"/></a>
-                                        <img t-att-alt="Equipment" t-att-src="kanban_image('res.users', 'image_small', record.user_id.raw_value)" t-att-title="record.user_id.value" width="24" height="24" class="oe_kanban_avatar"/>
+                                        <img t-att-alt="Equipment" t-att-src="kanban_image('res.partner', 'image_small', record.client_id.raw_value)" t-att-title="record.client_id.value" width="24" height="24" class="oe_kanban_avatar"/>
                                         </li>
                                     </ul>
                                 </div>
