--- a/equipment/views/equipment_view.xml
+++ b/equipment/views/equipment_view.xml
@@ -155,7 +155,7 @@
                                 </div>
                                 <div class="oe_kanban_details">
                                     <h4>
-                                        <a type="open"><field name="name"/></a>
+                                        <a type="open"><field name="id"/>-<field name="name"/></a>
                                     </h4>
                                     <ul>
                                         <li>Model: <field name="model_id"></field></li>
