--- a/equipment/views/equipment_view.xml
+++ b/equipment/views/equipment_view.xml
@@ -74,13 +74,17 @@
 															<group>
 																<group>
 																	<field name="manufacturer_id"/>
+																	<field name="provider_id"/>
 																	<field name="start_date"/>
 																	<field name="warranty_start_date"/>
+																	<field name="dealer_warranty_start_date"/>
 																</group>
 																<group>
 																	<field name="vendor_id"/>
 																	<field name="purchase_date"/>
+																	<field name="instalation_date"/>
 																	<field name="warranty_end_date"/>
+																	<field name="dealer_warranty_end_date"/>
 																</group>
 															</group>
 														</page>
@@ -161,7 +165,7 @@
                                     <ul>
                                         <li>Model: <field name="model_id"></field></li>
                                         <li>Brand: <field name="brand_id"></field></li>
-																				<li>Client: <field name="modality_id"></field></li>
+																				<li>Modality: <field name="modality_id"></field></li>
                                         <li class="emsa_kanban_info">
                                         <a t-if="record.criticality.raw_value == 0" t-attf-title="#{record.criticality.value}" class="emsa_attention_off"><span class="fa fa-exclamation-triangle"/></a>
                                         <a t-if="record.criticality.raw_value gt 0" t-attf-title="#{record.criticality.value}" class="emsa_attention_on"><span class="fa fa-exclamation-triangle"/></a>
