update technical Support

--- a/technical_support/views/technical_support_view.xml
+++ b/technical_support/views/technical_support_view.xml
@@ -47,11 +47,12 @@
                     </header>
                     <sheet>
                         <div class="oe_title">
-                            <h1>TSR# <field name="name" class="oe_inline" readonly="1"/></h1>
+                            <h1># <field name="name" class="oe_inline" readonly="1"/></h1>
                         </div>
                         <group>
                             <group>
                                 <field name="equipment_id"/>
+																<field name="client_id"/>
                                 <field name="cause"/>
                                 <field name="breakdown"/>
                             </group>
