--- a/technical_support/views/technical_support_view.xml
+++ b/technical_support/views/technical_support_view.xml
@@ -174,7 +174,7 @@
                     </header>
                     <sheet>
                         <div class="oe_title">
-                            <h1>#TSO <field name="name" class="oe_inline" readonly="1"/></h1>
+                            <h1># <field name="name" class="oe_inline" readonly="1"/></h1>
                         </div>
                         <group>
                             <group>
