--- a/technical_support/views/technical_support_view.xml
+++ b/technical_support/views/technical_support_view.xml
@@ -71,7 +71,18 @@
 															</group>
 														</page>
 														<page string="Equipment">
-															<separator string="Equipment Information"/>
+															<group>
+																<group>
+																	<field name="modality_id" widget="manyone"/>
+																	<field name="parent_id" widget="manyone"/>
+																	<field name="zone_id" widget="manyone"/>
+																</group>
+																<group>
+																	<field name="brand_id" widget="manyone"/>
+	                                <field name="model_id" widget="manyone"/>
+																	<field name="category_ids" widget="many2many" />
+																</group>
+															</group>
 														</page>
 														<page string="Client">
 																<separator string="Client Information"/>
