--- a/regulatory_issue/views/regulatory_technical_file_views.xml
+++ b/regulatory_issue/views/regulatory_technical_file_views.xml
@@ -333,6 +333,9 @@
             <field name="model">regulatory.technical.file.creation</field>
             <field name="arch" type="xml">
               <form string="Technical File Creation">
+                <header>
+                      <field name="stage_id" widget="statusbar" options="{'clickable': '1'}"/>
+                </header>
                   <sheet>
                       <div class="oe_title">
                           <label for="name" class="oe_edit_only" string="Name"/>
