--- a/regulatory_issue/views/regulatory_technical_file_views.xml
+++ b/regulatory_issue/views/regulatory_technical_file_views.xml
@@ -366,6 +366,8 @@
                     <field name="name"/>
                     <field name="sales_team_id" widget="many2one"/>
                     <field name="responsible_id" widget="many2one"/>
+                    <field name="model_id" widget="many2one"/>
+                    <field name="stage_id" widget="many2one"/>
                 </tree>
             </field>
         </record>
@@ -382,6 +384,9 @@
             <field name="model">regulatory.technical.file.modification</field>
             <field name="arch" type="xml">
               <form string="Technical File Modification">
+                <header>
+                      <field name="stage_id" widget="statusbar" options="{'clickable': '1'}"/>
+                </header>
                   <sheet>
                       <div class="oe_title">
                           <label for="name" class="oe_edit_only" string="Name"/>
