--- a/regulatory_issue/views/regulatory_technical_file_views.xml
+++ b/regulatory_issue/views/regulatory_technical_file_views.xml
@@ -338,7 +338,7 @@
                 </header>
                   <sheet>
                       <div class="oe_title">
-                          <label for="name" class="oe_edit_only" string="Name"/>
+                          <label for="name" class="oe_edit_only" string="Proposed Name for the File"/>
                           <h1>
                               <field name="name" placeholder="Name"/>
                           </h1>
@@ -397,11 +397,12 @@
                   <group>
                       <group>
                           <field name="technical_file_id" widget="many2one"/>
-                          <field name="sales_team_id" widget="many2one"/>
+                          <field name="technical_file_name" />
                       </group>
                       <group>
                         <field name="responsible_id" widget="many2one"/>
                         <field name="responsible_sales_id" widget="many2one"/>
+                        <field name="sales_team_id" widget="many2one"/>
                       </group>
                   </group>
                   <field name='observation' placeholder="Observation ......."/>
