--- a/regulatory_issue/views/regulatory_technical_file_views.xml
+++ b/regulatory_issue/views/regulatory_technical_file_views.xml
@@ -230,40 +230,46 @@
           <field name="view_mode">tree,form</field>
       </record>
 
-        <record id="regulatory_technical_file_view_form" model="ir.ui.view">
-            <field name="name">regulatory.technical.file.view.form</field>
-            <field name="model">regulatory.technical.file</field>
-            <field name="arch" type="xml">
-              <form string="Regulatory Technical File">
-                  <sheet>
-                      <div class="oe_title">
-                          <label for="name" class="oe_edit_only" string="Name"/>
-                          <h1>
-                              <field name="name" placeholder="Name"/>
-                          </h1>
-                  </div>
-                  <group>
-                      <group>
-                          <field name="technical_file_number"/>
-                          <field name="type_area_id" widget="many2one"/>
-                      </group>
-                      <group>
-                        <field name="group_id" widget="many2one"/>
-                      </group>
-                  </group>
-                  <field name='description' placeholder="Description ......."/>
-              </sheet>
-              </form>
-            </field>
-        </record>
+<!-- Technical File -->
+
+      <record id="regulatory_technical_file_view_form" model="ir.ui.view">
+        <field name="name">regulatory.technical.file.view.form</field>
+        <field name="model">regulatory.technical.file</field>
+        <field name="arch" type="xml">
+          <form string="Technical File">
+            <sheet>
+              <div class="oe_title">
+                <label for="name" class="oe_edit_only" string="Generic Name"/>
+                  <h1>
+                    <field name="name" placeholder="Generic Name"/>
+                  </h1>
+              </div>
+              <group>
+                <group>
+                  <field name="technical_file_number"/>
+                  <field name="type_area_id" widget="many2one"/>
+                </group>
+                <group>
+                  <field name="group_id" widget="many2one"/>
+                </group>
+              </group>
+              <field name='description' placeholder="Description ......."/>
+            </sheet>
+            <div class="oe_chatter">
+              <field name="message_follower_ids" widget="mail_followers"/>
+              <field name="message_ids" widget="mail_thread"/>
+            </div>
+          </form>
+        </field>
+      </record>
 
         <record id="regulatory_technical_file_view_tree" model="ir.ui.view">
             <field name="name">regulatory.technical.file.view.tree</field>
             <field name="model">regulatory.technical.file</field>
             <field name="arch" type="xml">
                 <tree>
-                    <field name="name"/>
                     <field name="technical_file_number"/>
+                    <field name="name"/>
                     <field name="type_area_id" widget="many2one"/>
                     <field name="group_id" widget="many2one"/>
                 </tree>
@@ -276,6 +282,8 @@
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
         </record>
+
+<!-- Technical File Registry -->
 
         <record id="regulatory_technical_file_registry_view_form" model="ir.ui.view">
             <field name="name">regulatory.technical.file.registry.view.form</field>
