--- a/regulatory_issue/views/regulatory_technical_file_views.xml
+++ b/regulatory_issue/views/regulatory_technical_file_views.xml
@@ -239,21 +239,27 @@
           <form string="Technical File">
             <sheet>
               <div class="oe_title">
-                <label for="name" class="oe_edit_only" string="Generic Name"/>
+                <label for="name" class="oe_edit_only" string="Technical File Number"/>
                   <h1>
-                    <field name="name" placeholder="Generic Name"/>
+                    <field name="name" placeholder="Technical File Number"/>
                   </h1>
               </div>
               <group>
                 <group>
-                  <field name="technical_file_number"/>
+                  <field name="technical_file_name"/>
                   <field name="type_area_id" widget="many2one"/>
                 </group>
                 <group>
                   <field name="group_id" widget="many2one"/>
                 </group>
               </group>
-              <field name='description' placeholder="Description ......."/>
+              <notebook>
+                  <page name="info" string="Info">
+                      <group>
+                        <field name='description' placeholder="Description ......."/>
+                      </group>
+                  </page>
+              </notebook>
             </sheet>
             <div class="oe_chatter">
               <field name="message_follower_ids" widget="mail_followers"/>
@@ -268,8 +274,8 @@
             <field name="model">regulatory.technical.file</field>
             <field name="arch" type="xml">
                 <tree>
-                    <field name="technical_file_number"/>
                     <field name="name"/>
+                    <field name="technical_file_name"/>
                     <field name="type_area_id" widget="many2one"/>
                     <field name="group_id" widget="many2one"/>
                 </tree>
@@ -309,12 +315,20 @@
                         <field name="responsible_id" widget="many2one"/>
                       </group>
                   </group>
-                  <field name='observation' placeholder="Observation ......."/>
+
                 </sheet>
-                <div class="oe_chatter">
-                  <field name="message_follower_ids" widget="mail_followers"/>
-                  <field name="message_ids" widget="mail_thread"/>
-                </div>
+                <notebook>
+                    <page name="info" string="Info">
+                        <group>
+                          <field name='observation' placeholder="Observation ......."/>
+                        </group>
+                    </page>
+                </notebook>
+              </sheet>
+              <div class="oe_chatter">
+                <field name="message_follower_ids" widget="mail_followers"/>
+                <field name="message_ids" widget="mail_thread"/>
+              </div>
               </form>
             </field>
         </record>
@@ -364,11 +378,18 @@
                         <field name="model_id" widget="many2one"/>
                       </group>
                   </group>
-                  <field name='observation' placeholder="Observation ......."/>
+              </sheet>
+              <notebook>
+                  <page name="info" string="Info">
+                      <group>
+                        <field name='observation' placeholder="Observation ......."/>
+                      </group>
+                  </page>
+              </notebook>
               </sheet>
               <div class="oe_chatter">
-                <field name="message_follower_ids" widget="mail_followers"/>
-                <field name="message_ids" widget="mail_thread"/>
+              <field name="message_follower_ids" widget="mail_followers"/>
+              <field name="message_ids" widget="mail_thread"/>
               </div>
               </form>
             </field>
@@ -421,12 +442,19 @@
                         <field name="sales_team_id" widget="many2one"/>
                       </group>
                   </group>
-                  <field name='observation' placeholder="Observation ......."/>
               </sheet>
-              <div class="oe_chatter">
-                <field name="message_follower_ids" widget="mail_followers"/>
-                <field name="message_ids" widget="mail_thread"/>
-              </div>
+              <notebook>
+                  <page name="info" string="Info">
+                      <group>
+                        <field name='observation' placeholder="Observation ......."/>
+                      </group>
+                  </page>
+              </notebook>
+            </sheet>
+            <div class="oe_chatter">
+              <field name="message_follower_ids" widget="mail_followers"/>
+              <field name="message_ids" widget="mail_thread"/>
+            </div>
               </form>
             </field>
         </record>
